corrected vertical align issues with header and nav

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -31,15 +31,20 @@
 		}
 
 		#logo {
+			/* width:420px; */
+		}
+
+		#logo img {
 			width:420px;
 		}
 	
 		#logo a {
-			display: block;
+			display: flex;
 			text-decoration: none;
 			font-size: 2.8em;
 			font-weight: 600;
 			color: #000;
+			align-items: center;
 		}
 
 	
@@ -52,7 +57,7 @@
 	{
 		position: absolute;
 		right: 0em;
-		top: 1.8em;
+		top: 1.4em;
 		display: flex;
 		align-items: center;
 		justify-content: center;
